Fixed workout plan CRUD operations